<resources>
    <string name="app_name" translatable="false">QuotationShake</string>

    <string name="quotationShake" translatable="false">Quotation Shake</string>
    <string name="randomQuotations">Random Quotations</string>
    <string name="getQuotations">Get Quotations</string>
    <string name="favQuotations">Favourite quotations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="aboutText" translatable="false">“Quotation Shake by\n\n Francisco Arjona Jimenez \n\n arjonapaco0@gmail.com \n\nDeveloped for DADM 2022”)</string>
    <string name="userSettings">Name that identifies the user</string>
    <string name="insertSettings">Insert your name</string>
    <string name="getSettings">Get quotations in the selected language</string>
    <string name="reqSettings">Request quotations using the selected HTTP method</string>
    <string name="GETSett" translatable="false">GET</string>
    <string name="POSTSett" translatable="false">POST</string>
    <string name="get" translatable="false">get</string>
    <string name="post" translatable="false">post</string>
    <string name="authorInfo">Author Info</string>
    <string name="sampleQuo">Sample Quotation %1$d</string>
    <string name="sampleAut">Sample Author %1$d</string>
    <string name="hello" translatable="false">Hello %1s!\nPress Refresh to get a new quotation</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="en" translatable="false">en</string>
    <string name="ru" translatable="false">ru</string>
    <string name="noName">No author</string>
    <string name="userName">User name</string>
    <string name="obatiningQuo">Obtaining quotations</string>
    <string name="chooseLanguage">Quotations language</string>
    <string name="httpRequests">HTTP requests</string>
    <string name="key" translatable="false">quotationKey</string>
    <string name="noRegisteredUser">Nameless One</string>
    <string name="notFound">Not possible to get the Quote</string>
    <string name="connectionError">Connection Error</string>



</resources>