<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <Button
        android:id="@+id/buttonGetQuo"
        android:layout_width="65dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:text="@string/getQuotations"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonFavQuo"
        android:layout_width="96dp"
        android:layout_height="74dp"
        android:text="@string/favQuotations"
        app:layout_constraintStart_toEndOf="@+id/buttonGetQuo"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="104dp"
        android:layout_height="88dp"
        android:text="@string/settings"
        app:layout_constraintStart_toEndOf="@+id/buttonFavQuo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="93dp"
        android:layout_height="99dp"
        android:layout_marginEnd="20dp"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSettings"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/idGeneralFragment"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>